# auto_tts

./: .env.example  README.md  pyproject.toml
src/auto_tts/: __init__.py  phrases.xlsx
